<resources>
    <string name="app_name">Smack</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="channel_name">channel name</string>
    <string name="please_log_in">Please Log In</string>
    <string name="send_button">Send button</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="add_a_new_channel">Add a new channel</string>
    <string name="create_user">Create User</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="generate_background_color">Generate Background Color</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="generates_an_avatar_for_user">Generates an Avatar for user</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="text_logout">Logout</string>
    <string name="text_add_channel">Add Channels</string>
    <string name="channel_desc">channel description</string>
    <string name="add_channel">Add Channel</string>
</resources>