<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:text="@string/add_channel" />

    <EditText
        android:id="@+id/addChannelNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:hint="@string/channel_name"
        android:inputType="textPersonName"
        android:textColor="#615A5A" />

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:textColor="#615A5A"
        android:hint="@string/channel_desc"
        android:inputType="textPersonName" />
</androidx.appcompat.widget.LinearLayoutCompat>